fixed spacing

--- a/Fujiyama-Mama/working-site/css/main.css
+++ b/Fujiyama-Mama/working-site/css/main.css
@@ -117,6 +117,11 @@ textarea {
 	font-weight: none;
 	font-family: 'Yanone Kaffeesatz', sans-serif;
 }
+
+ul {
+	padding: 0px;
+	margin: 0px;
+}
 ul li {
 	display: inline;
 	list-style-type: none;
